--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 theme: jekyll-theme-cayman
 title: 欢迎来到CAC@OPPO技术教练训练营
 description: 你可以在这里找到训练营相关的全部信息
+github:
+  is_project_page: true
+  repository_url: https://https://github.com/CAC-0pp0/cac-0pp0.github.io
+  repository_name: cac-0pp0.github.io
+  owner_url: https://github.com/cac-tech-coaches
+  owner_name: Qin Yu
