--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ github:
   is_project_page: true
   repository_url: https://https://github.com/CAC-0pp0/cac-0pp0.github.io
   repository_name: cac-0pp0.github.io
-  owner_url: https://github.com/cac-tech-coaches
-  owner_name: Qin Yu
+  owner_url: https://github.com/cac-tech-coach
+  owner_name: CAC 技术教练
