--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,11 @@ github:
   repository_name: cac-0pp0.github.io
   owner_url: https://github.com/cac-tech-coach
   owner_name: CAC 技术教练
+  
+markdown: kramdown
+
+kramdown:
+  input: GFM
+  hard_wrap: false
+  syntax_highlighter: rouge
+
