Generalize android training camp.

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 theme: jekyll-theme-cayman
-title: 欢迎来到CAC@OPPO技术教练训练营
-description: 你可以在这里找到训练营相关的全部信息
+title: 欢迎来到CAC技术教练社区
+description: 拥抱变化，用技术改变世界
 github:
   is_project_page: true
-  repository_url: https://github.com/CAC-0pp0/cac-0pp0.github.io
-  repository_name: cac-0pp0.github.io
+  repository_url: https://github.com/cac-tech-coach/cac-tech-coach.github.io
+  repository_name: cac-tech-coach.github.io
   owner_url: https://github.com/cac-tech-coach
-  owner_name: CAC 技术教练
+  owner_name: CAC技术教练社区
   
 markdown: kramdown
 
